# logcfg

./: LogCfg.l  Makefile  compile.sh  logsystem.cfg
src/: CMakeLists.txt
src/cfgParser/: CMakeLists.txt  logCfg.l
src/unitTest/: CMakeLists.txt  ut_main.cpp
